Fix popup layout for XF 2.1

--- a/Samples/XLabs.Sample/Pages/Controls/PopupPage.xaml
+++ b/Samples/XLabs.Sample/Pages/Controls/PopupPage.xaml
@@ -6,9 +6,9 @@
 
 	<ContentPage.Content>
 		<controls:PopupLayout>
-			<controls:PopupLayout.Content>
+			<controls:PopupLayout.PageContent>
 				<Button x:Name="OpenButton" Text="Open selector popup" />
-			</controls:PopupLayout.Content>
+			</controls:PopupLayout.PageContent>
 		</controls:PopupLayout>
 	</ContentPage.Content>
 </ContentPage>
